# ESP32S3_Watch

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/APP/: APP_Config.h  Application.cpp  Application.h  CMakeLists.txt  HttpResponseParser.h  MapManager.cpp  MapManager.h  MapProvider.cpp  MapProvider.h  ModuleBox.cpp  ModuleBox.h  PageManager.cpp  PageManager.h  PositionManager.cpp  PositionManager.h
components/HalLayer/: CMakeLists.txt  HAL_Config.h  HAL_GPS.cpp  HAL_GPS.h  HAL_IMU.cpp  HAL_IMU.h  HAL_InDev.cpp  HAL_InDev.h  HAL_Manager.cpp  HAL_Manager.h  HAL_Module.cpp  HAL_Module.h  HAL_SDCard.cpp  HAL_SDCard.h  HAL_Screen.cpp  HAL_Screen.h  HAL_WiFi.cpp  HAL_WiFi.h
components/Nmea/: CMakeLists.txt  Kconfig.projbuild  nmea_parser.h
components/Utils/: CMakeLists.txt  Connect.cpp  Connect.h
components/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_disp_template.h
components/lvgl/src/core/: lv_obj_tree.c
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_i2c/: i2c_manager.c
components/lvgl_esp32_drivers/lvgl_tft/: GC9A01.h  st7789.c
components/lvgl_esp32_drivers/lvgl_touch/: CST816T.c  CST816T.h  Kconfig  touch_driver.c  touch_driver.h
components/lvgl_porting/: CMakeLists.txt  lv_fs_fatfs.cpp  lv_port.h  lv_port_disp.cpp  lv_port_indev.cpp
main/: CMakeLists.txt  main.cpp
